# electronpass-desktop

./: .appveyor.yml  .docker_build.sh  .gitignore  .gitmodules  .travis.yml  Build-Win.md  CMakeLists.txt  Findsodium.cmake  README.md  Testing.md  build.sh  building_on_windows.md  create-linux-appdir.sh  create-linux-appimage.sh  electronpass-win.pro  electronpass.pro  install-dependencies.sh
.builder/: Dockerfile  build.ps1  build_helper.bat  create-linux-appimage.sh  docker_build.sh  prepare_cryptopp.py
.travis/: install_cmake_3.sh
app/: ActionHandler.cpp  ActionHandler.hpp  CMakeLists.txt  action_handler.cpp  action_handler.hpp  clipboard.cpp  clipboard.hpp  convert_field.cpp  data_holder.cpp  data_holder.hpp  electronpass.qrc  file_dialog.cpp  file_dialog.hpp  file_stream.cpp  file_stream.hpp  globals.cpp  globals.hpp  item_template.cpp  main.cpp  passwords.cpp  passwords.hpp  search.cpp  settings.cpp  settings.hpp  setup.cpp  setup.hpp  wallet_merger.cpp  wallet_merger.hpp
app/qml/: DeleteConfirmationDialog.qml  Details.qml  ItemDetail.qml  ItemDetails.qml  ItemsList.qml  Lock.qml  Page1.qml  Page1Form.ui.qml  SettingsDialog.qml  Setup.qml  main.qml
app/qml/Components/: ConfirmPassIndicator.qml  EditItemDetail.qml  EditItemDetailContentTextField.qml  Infobar.qml  ItemDetail.qml  ListItem.qml  PassGenerator.qml  PassStrengthIndicator.qml  ShortcutBlock.qml  ShortcutItem.qml  Snackbar.qml  SyncIndicator.qml
app/qml/Dialogs/: AboutDialog.qml  DeleteConfirmationDialog.qml  EditItemDialog.qml  MessageDialog.qml  ResetWalletDialog.qml  SettingsChangeSyncDialog.qml  SettingsDialog.qml  SetupFromSyncServiceDialog.qml  Snackbar.qml  SyncDialog.qml  SyncOnlineFileCorruptedDialog.qml  SyncOnlinePasswordDialog.qml
app/res/: background_sources.txt
app/res/fonts/: fonts.qrc
app/res/img/: img.qrc
app/res/web/: authorization_successfull.html
app/sync/: auth_server.cpp  auth_server.hpp  dropbox.cpp  dropbox.hpp  gdrive.cpp  gdrive.hpp  keys.default.txt  keys.hpp  keys.hpp.in  keys.txt  sync_base.hpp  sync_manager.cpp  sync_manager.hpp
data/: CMakeLists.txt  electronpass.appdata.xml  electronpass.desktop
